fixed social icon and menu wrapping problem

--- a/css/yotfh.css
+++ b/css/yotfh.css
@@ -174,7 +174,7 @@ ul.menu li.active a {
 @media screen and (max-width: 768px) {
     
     ul.menu li {
-        font-size: 2.4vw;
+        font-size: 2.3vw;
     }
     .nav>li>a {
         position: relative;
